--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
     environment:
       DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
       DOTNET_CLI_TELEMETRY_OPTOUT: 1
-      TEST_NAME: Core.Charge.Test
+      TEST_NAME: Core.Charge.Tests
     steps:
       - checkout
       - run:
