--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,8 @@ jobs:
       - checkout
       - run:
           name: Configure Enviroment
-          command: echo "$CIRCLE_TAG"
+          command: |
+                echo "$CIRCLE_TAG"
 workflows:
   version: 2
   default-workflow:
